@@ -490,3 +490,6 @@
 	- enabled parse_directory() for Visual Studio 2010 by using dirent API
 	- seperated project output folders in Visual Studio
 	- also compile mame_regtest Release as C++
+	
+	create_report
+	- added a summary at the end when "dokuwiki_format" is set
